# valkyrie-util

./: .gitignore  README.md  mypy.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
config/: mypy_cmd.py
tests/: test_calculate.py  test_sample.py
tests/calculate/: test_range_int_sum.py  test_sum_of_squares.py
tests/collatz/: test_collatz_iterator.py  test_collatz_length.py  test_next_collatz.py
tests/factors/: test_combine_factorizations.py  test_divisor_count.py  test_divisor_count_factorization.py  test_factorization_product.py  test_lcm_factorization.py  test_prime_factorization.py  test_proper_divisor_sum.py  test_proper_divisors.py
tests/fibonacci/: test_fibonacci_iterator.py
tests/large/: test_large_number_multiply.py  test_large_number_sum.py  test_large_number_to_string.py  test_string_to_large_number.py
tests/primes/: test_is_prime.py  test_nth_prime.py  test_prime_factorization.py  test_prime_iterator.py
tests/triangle/: test_nth_triangle_number.py  test_triangle_num_iterator.py
valkyrie_util/: Calculate.py  TestClass.py  __init__.py  collatz.py  factors.py  large.py  primes.py  triangle.py
