[metadata]
description-file = README.md

[flake8]
; https://flake8.pycqa.org/en/latest/user/options.html
; format flake8 output options
count = True
show-source = True
statistics = True

; code settings
max-line-length = 127

; flake8-annotations - https://pypi.org/project/flake8-annotations/
extend-ignore = ANN101

; flake8-quotes - https://pypi.org/project/flake8-quotes/
multiline-quotes = '
docstring-quotes = '


[mypy]

; platform configuration
python_version = 3.8

; disallowing dynamic typing
disallow_any_unimported = True
disallow_any_expr = True
disallow_any_decorated = True
disallow_any_explicit = True
disallow_any_generics = True
disallow_subclassing_any = True

; untyped definitions and calls
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True

; none and optional handling
no_implicit_optional = True
strict_optional = True

; configuring warnings
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_return_any = True
warn_unreachable = True

; surpressing errors
show_none_errors = True
ignore_errors = False

; miscellaneous strictness flags
allow_untyped_globals = False
allow_redefinition = False
implicit_reexport = False
strict_equality = True

; configuring error messages
show_error_context = True
show_column_numbers = False
show_error_codes = True
pretty = True
color_output = True
error_summary = True
show_absolute_path = False